<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.multimediaexchanger.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stream"
        android:name="com.example.multimediaexchanger.ui.stream.StreamFragment"
        android:label="@string/title_stream"
        tools:layout="@layout/fragment_stream" />

    <fragment
        android:id="@+id/navigation_calls"
        android:name="com.example.multimediaexchanger.ui.calls.CallsFragment"
        android:label="@string/title_calls"
        tools:layout="@layout/fragment_calls" />

    <fragment
        android:id="@+id/navigation_files"
        android:name="com.example.multimediaexchanger.ui.files.FilesFragment"
        android:label="@string/title_files"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.multimediaexchanger.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

</navigation>